<resources>
    <string name="app_name">PVPIT Mock MHT-CET</string>

    <string name="facebook"><a href="https://www.facebook.com/pvpitbavdhan">https://www.facebook.com/pvpitbavdhanm</a></string>
    <string name="instagram"><a href="https://instagram.com/pvpitbavdhan6122?igshid=ODM2MWFjZDg=">https://instagram.com/pvpitbavdhan6122?igshid=ODM2MWFjZDg=</a></string>
    <string name="LinkedIn"><a href="https://www.linkedin.com/company/padmabhooshan-vasantdada-patil-institute-of-technology-bavdhan-6122/">https://www.linkedin.com/company/padmabhooshan-vasantdada-patil-institute-of-technology-bavdhan-6122/</a></string>
    <string name="college"><a href="https://www.youtube.com/@pvpitbavdhanpune-2184">https://www.youtube.com/@pvpitbavdhanpune-2184</a></string>
    <string name="FEdept"><a href="https://www.youtube.com/@fepvpitpune6122">https://www.youtube.com/@fepvpitpune6122</a></string>
    <string name="mechdept"><a href="https://youtube.com/@teamtech-titans4772">https://youtube.com/@teamtech-titans4772</a></string>
    <string name="admission"><a href="https://youtube.com/@ChemistrywithSK">https://youtube.com/@ChemistrywithSK</a></string>
</resources>